# versecbot-ReactionLimiter

./: README.md  Taskfile.yml  pyproject.toml
src/versecbot_reaction_limiter/: __init__.py  jobs.py  plugin.py  settings.py
